# strategy_xv

./: .env  .env.sample  .gitignore  2.2.2  README.md  pyproject.toml  requirements.txt  strategy_xv - Shortcut.lnk
.github/workflows/: python-app.yml
benefitCostScore/: README.md  benefit_cost_score.py  convertData.py  main.py
benefitCostScore/data/: CombinedTest.csv  CombinedTestConverted.csv  SegmentBLoop.csv  SegmentBLoopConverted.csv  SegmentDLoop.csv  SegmentDLoopConverted.csv  SegmentELoop.csv  SegmentELoopConverted.csv
benefitCostScore/test/: test_benefit_cost_score.py  test_convert_data.py
database/: database.sh  docker-compose.yaml  main.py  seed.py  setup_db.py
dynamics/: README.md  car_model.py
google_maps_dashboard/: index.html  package-lock.json  package.json  sample_race.csv
google_maps_dashboard/src/: App.jsx
optimization/: Optimization Project Details.md  data_with_forces.csv  elevation_air_density.csv  new_optimizer.py  new_solar.py  optimizer.py  race_track_data.csv  sample_data_gen.py
optimization/archived/: README.md
routemodel/: README.md
routemodel/app/: __init__.py  constants.py  graph.py  routes.py  sample_route_step4.csv  trip_longitude.csv  websocket_routes.py  wsgi.py
routemodel/carforces/: carforces.py
routemodel/data/: checkpoint_model_db.csv  route.csv  route_model_db.csv
routemodel/data_retrieval/: common.py  elevations.py  routes.py  speedlimits.py
routemodelv2/: README.md  RouteClass.py  route.py
simulation/: Ring Road Drivers.csv  driversim.py  requirements.txt
soc/: README.md  main.py  simpsons_rule.py
(+56 files in other folders)
